@@ -24,6 +24,7 @@ import org.elasticsearch.test.ESTestCase;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
@@ -35,13 +36,15 @@ public class FieldAliasMapperValidationTests extends ESTestCase {
         ObjectMapper objectMapper = createObjectMapper("some.path");
         FieldAliasMapper aliasMapper = new FieldAliasMapper("path", "some.path", "field");
 
-        MapperParsingException e = expectThrows(MapperParsingException.class, () ->
-            new MappingLookup(
-                Collections.emptyList(),
+        MapperParsingException e = expectThrows(
+            MapperParsingException.class,
+            () -> createMappingLookup(
+                emptyList(),
                 singletonList(objectMapper),
                 singletonList(aliasMapper),
-                emptyList(),
-                0));
+                emptyList()
+            )
+        );
         assertEquals("Alias [some.path] is defined both as an object and an alias", e.getMessage());
     }
 
@@ -50,14 +53,15 @@ public class FieldAliasMapperValidationTests extends ESTestCase {
         FieldMapper invalidField = new MockFieldMapper("invalid");
         FieldAliasMapper invalidAlias = new FieldAliasMapper("invalid", "invalid", "field");
 
-        MapperParsingException e = expectThrows(MapperParsingException.class, () ->
-            new MappingLookup(
+        MapperParsingException e = expectThrows(
+            MapperParsingException.class,
+            () -> createMappingLookup(
                 Arrays.asList(field, invalidField),
                 emptyList(),
                 singletonList(invalidAlias),
-                emptyList(),
-                0));
-
+                emptyList()
+            )
+        );
         assertEquals("Alias [invalid] is defined both as an alias and a concrete field", e.getMessage());
     }
 
@@ -66,12 +70,12 @@ public class FieldAliasMapperValidationTests extends ESTestCase {
         FieldAliasMapper alias = new FieldAliasMapper("alias", "alias", "field");
         FieldAliasMapper invalidAlias = new FieldAliasMapper("invalid-alias", "invalid-alias", "alias");
 
-        MappingLookup mappers = new MappingLookup(
+        MappingLookup mappers = createMappingLookup(
             singletonList(field),
             emptyList(),
             Arrays.asList(alias, invalidAlias),
-            emptyList(),
-            0);
+            emptyList()
+        );
         alias.validate(mappers);
 
         MapperParsingException e = expectThrows(MapperParsingException.class, () -> invalidAlias.validate(mappers));
@@ -84,12 +88,12 @@ public class FieldAliasMapperValidationTests extends ESTestCase {
         FieldAliasMapper invalidAlias = new FieldAliasMapper("invalid-alias", "invalid-alias", "invalid-alias");
 
         MapperParsingException e = expectThrows(MapperParsingException.class, () -> {
-            MappingLookup mappers = new MappingLookup(
+            MappingLookup mappers = createMappingLookup(
                 emptyList(),
                 emptyList(),
                 singletonList(invalidAlias),
-                emptyList(),
-                0);
+                emptyList()
+            );
             invalidAlias.validate(mappers);
         });
 
@@ -101,12 +105,12 @@ public class FieldAliasMapperValidationTests extends ESTestCase {
         FieldAliasMapper invalidAlias = new FieldAliasMapper("invalid-alias", "invalid-alias", "non-existent");
 
         MapperParsingException e = expectThrows(MapperParsingException.class, () -> {
-            MappingLookup mappers = new MappingLookup(
+            MappingLookup mappers = createMappingLookup(
                 emptyList(),
                 emptyList(),
                 singletonList(invalidAlias),
-                emptyList(),
-                0);
+                emptyList()
+            );
             invalidAlias.validate(mappers);
         });
 
@@ -118,12 +122,12 @@ public class FieldAliasMapperValidationTests extends ESTestCase {
         ObjectMapper objectMapper = createNestedObjectMapper("nested");
         FieldAliasMapper aliasMapper = new FieldAliasMapper("alias", "nested.alias", "nested.field");
 
-        MappingLookup mappers = new MappingLookup(
+        MappingLookup mappers = createMappingLookup(
             singletonList(createFieldMapper("nested", "field")),
             singletonList(objectMapper),
             singletonList(aliasMapper),
-            emptyList(),
-            0);
+            emptyList()
+        );
         aliasMapper.validate(mappers);
     }
 
@@ -131,12 +135,12 @@ public class FieldAliasMapperValidationTests extends ESTestCase {
 
         FieldAliasMapper aliasMapper = new FieldAliasMapper("alias", "object2.alias", "object1.field");
 
-        MappingLookup mappers = new MappingLookup(
-            singletonList(createFieldMapper("object1", "field")),
-            Arrays.asList(createObjectMapper("object1"), createObjectMapper("object2")),
+        MappingLookup mappers = createMappingLookup(
+            org.elasticsearch.common.collect.List.of(createFieldMapper("object1", "field")),
+            org.elasticsearch.common.collect.List.of(createObjectMapper("object1"), createObjectMapper("object2")),
             singletonList(aliasMapper),
-            emptyList(),
-            0);
+            emptyList()
+        );
         aliasMapper.validate(mappers);
     }
 
@@ -145,12 +149,12 @@ public class FieldAliasMapperValidationTests extends ESTestCase {
         FieldAliasMapper aliasMapper = new FieldAliasMapper("alias", "alias", "nested.field");
 
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> {
-            MappingLookup mappers = new MappingLookup(
+            MappingLookup mappers = createMappingLookup(
                 singletonList(createFieldMapper("nested", "field")),
                 Collections.singletonList(objectMapper),
                 singletonList(aliasMapper),
-                emptyList(),
-                0);
+                emptyList()
+            );
             aliasMapper.validate(mappers);
         });
 
@@ -164,15 +168,14 @@ public class FieldAliasMapperValidationTests extends ESTestCase {
         FieldAliasMapper aliasMapper = new FieldAliasMapper("alias", "nested2.alias", "nested1.field");
 
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> {
-            MappingLookup mappers = new MappingLookup(
+            MappingLookup mappers = createMappingLookup(
                 singletonList(createFieldMapper("nested1", "field")),
                 Arrays.asList(createNestedObjectMapper("nested1"), createNestedObjectMapper("nested2")),
                 singletonList(aliasMapper),
-                emptyList(),
-                0);
+                emptyList()
+            );
             aliasMapper.validate(mappers);
         });
-
 
         String expectedMessage = "Invalid [path] value [nested1.field] for field alias [nested2.alias]: " +
             "an alias must have the same nested scope as its target. The alias's nested scope is [nested2], " +
@@ -196,5 +199,15 @@ public class FieldAliasMapperValidationTests extends ESTestCase {
             new Explicit<>(true, false),
             ObjectMapper.Nested.newNested(),
             ObjectMapper.Dynamic.FALSE, emptyMap(), Version.CURRENT);
+    }
+
+    private static MappingLookup createMappingLookup(List<FieldMapper> fieldMappers,
+                                                     List<ObjectMapper> objectMappers,
+                                                     List<FieldAliasMapper> fieldAliasMappers,
+                                                     List<RuntimeFieldType> runtimeFields) {
+        RootObjectMapper.Builder builder = new RootObjectMapper.Builder("_doc", Version.CURRENT);
+        runtimeFields.forEach(builder::addRuntime);
+        Mapping mapping = new Mapping(builder.build(new ContentPath()), new MetadataFieldMapper[0], Collections.emptyMap());
+        return new MappingLookup(mapping, fieldMappers, objectMappers, fieldAliasMappers, null, null, null);
     }
 }
